Adjusted the tutorial based on new suggestions (#447)
Co-authored-by: Jakub Adamczyk <jakubadamczyk10@gmail.com>

--- a/examples/08_similarity_and_distance_metrics.ipynb
+++ b/examples/08_similarity_and_distance_metrics.ipynb
@@ -30,10 +30,10 @@
    "metadata": {},
    "source": [
     "In general, we can divide those measures into two groups, depending on their input:\n",
-    "1. Working on molecular fingerprints (vectorized molecules). There are specific metrics for binary and count fingerprints.\n",
+    "1. Working on molecular fingerprints (vectorized molecules). Different metrics and metric variants are used for binary and count fingerprints.\n",
     "2. Using molecules (RDKit ``Mol`` objects) directly.\n",
     "\n",
-    "Most functions are naturally defined as similarities - the higher, the more similar two molecules are. Every similarity also has a corresponding distance function implemented, usually equal to `1 - similarity`.\n",
+    "Most functions are naturally defined as similarities - the higher, the more similar two molecules are. Most similarity functions have a bounded value range, typically [0,1]. Every similarity also has a corresponding distance function implemented, usually equal to `1 - similarity`.\n",
     "\n",
     "Additionally, for batch computation, e.g. pairwise similarity measurements, every metric also has a bulk function, which works on whole matrices (or lists of molecules)."
    ]
@@ -55,12 +55,12 @@
     "- only considering \"on\" bits, i.e. 1s in vector representations\n",
     "- including both \"off\" and \"on\" bits\n",
     "\n",
-    "For two binary vectors `x` and `y`, we can define four values, which are used to define metrics:\n",
+    "For two binary vectors `x` and `y`, we can define four values, which are used to compute metrics:\n",
     "\n",
     "  - $a$ – $|x \\cap y|$, the number of common \"on\" bits\n",
-    "  - $b$ – the number of positions where $x$ is 1 and $y$ is 0\n",
-    "  - $c$ – the number of positions where $x$ is 0 and $y$ is 1\n",
-    "  - $d$ – the number of positions where both are 0, the number of common \"off\" bits\n",
+    "  - $b$ – $|x \\cap \\bar{y}|$, the number of positions where $x$ is 1 and $y$ is 0\n",
+    "  - $c$ – $|\\bar{x} \\cap y|$, the number of positions where $x$ is 0 and $y$ is 1\n",
+    "  - $d$ – $|\\bar{x} \\cap \\bar{y}|$, the number of positions where both are 0, the number of common \"off\" bits\n",
     "\n",
     "We can also mark $|x|$ as total number of \"on\" bits (1s) in the $x$ vector.\n",
     "\n",
@@ -70,7 +70,7 @@
     "  sim(x, y) = \\frac{|x \\cap y|}{|x \\cup y|} = \\frac{|x \\cap y|}{|x| + |y| - |x \\cap y|} = \\frac{a}{a + b + c}\n",
     "  $$\n",
     "\n",
-    "[Tanimoto count similarity](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.distances.tanimoto_count_similarity.html) is an extension to count vectors, utilizing dot product as a measure of \"common bits\", and vector length instead of just sum of 1s. The larger the dot product, the more similar are two vectors. It is defined as:\n",
+    "[Tanimoto count similarity](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.distances.tanimoto_count_similarity.html) is an extension to count vectors, utilizing dot product as a measure of \"common bits\", and vector length instead of just sum of 1s. The larger the dot product, the more similar the two vectors are. It is defined as:\n",
     "\n",
     "  $$\n",
     "  sim(x, y) = \\frac{x \\cdot y}{\\|x\\|^2 + \\|y\\|^2 - x \\cdot y}\n",
@@ -98,11 +98,11 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-01T18:50:39.247074Z",
-     "iopub.status.busy": "2025-04-01T18:50:39.246831Z",
-     "iopub.status.idle": "2025-04-01T18:50:40.182037Z",
-     "shell.execute_reply": "2025-04-01T18:50:40.181483Z",
-     "shell.execute_reply.started": "2025-04-01T18:50:39.247058Z"
+     "iopub.execute_input": "2025-04-05T16:10:57.013720Z",
+     "iopub.status.busy": "2025-04-05T16:10:57.013620Z",
+     "iopub.status.idle": "2025-04-05T16:10:57.975129Z",
+     "shell.execute_reply": "2025-04-05T16:10:57.974801Z",
+     "shell.execute_reply.started": "2025-04-05T16:10:57.013705Z"
     }
    },
    "outputs": [
@@ -159,11 +159,11 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-01T18:50:40.182983Z",
-     "iopub.status.busy": "2025-04-01T18:50:40.182758Z",
-     "iopub.status.idle": "2025-04-01T18:50:40.188856Z",
-     "shell.execute_reply": "2025-04-01T18:50:40.188118Z",
-     "shell.execute_reply.started": "2025-04-01T18:50:40.182966Z"
+     "iopub.execute_input": "2025-04-05T16:10:57.975668Z",
+     "iopub.status.busy": "2025-04-05T16:10:57.975477Z",
+     "iopub.status.idle": "2025-04-05T16:10:57.978498Z",
+     "shell.execute_reply": "2025-04-05T16:10:57.978236Z",
+     "shell.execute_reply.started": "2025-04-05T16:10:57.975658Z"
     }
    },
    "outputs": [
@@ -201,11 +201,11 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-01T18:50:40.189778Z",
-     "iopub.status.busy": "2025-04-01T18:50:40.189495Z",
-     "iopub.status.idle": "2025-04-01T18:50:40.202394Z",
-     "shell.execute_reply": "2025-04-01T18:50:40.201618Z",
-     "shell.execute_reply.started": "2025-04-01T18:50:40.189756Z"
+     "iopub.execute_input": "2025-04-05T16:10:57.978897Z",
+     "iopub.status.busy": "2025-04-05T16:10:57.978799Z",
+     "iopub.status.idle": "2025-04-05T16:10:57.993434Z",
+     "shell.execute_reply": "2025-04-05T16:10:57.993128Z",
+     "shell.execute_reply.started": "2025-04-05T16:10:57.978888Z"
     }
    },
    "outputs": [
@@ -247,12 +247,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some similarities include molecule structure directly in their calculation. Those can be sometimes more flexible, as they don't lose any information during the fingerprint calculation step.\n",
+    "Some similarities include molecule structure directly in their calculation. Sometimes they can be more flexible, as they don't lose any information during the fingerprint calculation step.\n",
     "\n",
     "[Fraggle similarity](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.distances.fraggle_similarity.html) is designed to be less sensitive to small changes in the middle of molecule, compared to fingerprint-based measures. It looks more on the \"overall shape similarity\" of molecules. Its calculation consists of a few steps:\n",
-    "- fragment molecule into \"interesting\" substructures by acyclic and ring cuts, leaving only “large” parts of a molecule (>60%)\n",
+    "- fragment molecule into \"interesting\" substructures by acyclic and ring cuts, leaving only “large” parts of the molecule (>60%)\n",
     "- compare fragments with Tversky similarity, keep only appropriately similar ones\n",
-    "- compure [RDKit fingerprints](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.fingerprints.RDKitFingerprint.html) with path length 5, compare with Tanimoto similarity\n",
+    "- compute [RDKit fingerprints](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.fingerprints.RDKitFingerprint.html) with path length 5, compare with Tanimoto similarity\n",
     "- largest Tanimoto similarity is the Fraggle similarity value\n",
     "\n",
     "This measure is asymmetric, i.e. `sim(mol_a, mol_b)` can be potentially quite different from `sim(mol_b, mol_a)`. Its value range is $[0, 1]$.\n",
@@ -278,11 +278,11 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-01T18:51:25.652537Z",
-     "iopub.status.busy": "2025-04-01T18:51:25.652224Z",
-     "iopub.status.idle": "2025-04-01T18:51:25.753850Z",
-     "shell.execute_reply": "2025-04-01T18:51:25.753344Z",
-     "shell.execute_reply.started": "2025-04-01T18:51:25.652510Z"
+     "iopub.execute_input": "2025-04-05T16:10:57.993884Z",
+     "iopub.status.busy": "2025-04-05T16:10:57.993772Z",
+     "iopub.status.idle": "2025-04-05T16:10:58.068686Z",
+     "shell.execute_reply": "2025-04-05T16:10:58.068353Z",
+     "shell.execute_reply.started": "2025-04-05T16:10:57.993874Z"
     }
    },
    "outputs": [
@@ -319,14 +319,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-01T18:52:51.288381Z",
-     "iopub.status.busy": "2025-04-01T18:52:51.288130Z",
-     "iopub.status.idle": "2025-04-01T18:52:51.292273Z",
-     "shell.execute_reply": "2025-04-01T18:52:51.291780Z",
-     "shell.execute_reply.started": "2025-04-01T18:52:51.288366Z"
+     "iopub.execute_input": "2025-04-05T16:10:58.069216Z",
+     "iopub.status.busy": "2025-04-05T16:10:58.069058Z",
+     "iopub.status.idle": "2025-04-05T16:10:58.071897Z",
+     "shell.execute_reply": "2025-04-05T16:10:58.071616Z",
+     "shell.execute_reply.started": "2025-04-05T16:10:58.069204Z"
     },
     "id": "OQNn3USQYCWW"
    },
@@ -367,30 +367,22 @@
    "source": [
     "scikit-fingerprints is designed and tested to be fully compatible with scikit-learn. As such, you can use similarity metrics in your ML pipelines, e.g. for [k nearest neighbors classifier](https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.KNeighborsClassifier.html). Same mechanism would also work for density-based clustering like [DBSCAN](https://scikit-learn.org/stable/modules/generated/sklearn.cluster.DBSCAN.html).\n",
     "\n",
-    "Let's see how this works using a kNN classifier on [BACE dataset](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/datasets/generated/skfp.datasets.moleculenet.load_bace.html#skfp.datasets.moleculenet.load_bace). Note that in scikit-learn, functions expect **distances**, not similarities, so you have to use an appropriate function."
+    "Let's see how this works using a kNN classifier on [BACE dataset](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/datasets/generated/skfp.datasets.moleculenet.load_bace.html#skfp.datasets.moleculenet.load_bace). Note that in scikit-learn, the interface expects **distances**, not similarities, so you have to use an appropriate function."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-01T18:59:07.062240Z",
-     "iopub.status.busy": "2025-04-01T18:59:07.062034Z",
-     "iopub.status.idle": "2025-04-01T18:59:14.219629Z",
-     "shell.execute_reply": "2025-04-01T18:59:14.218956Z",
-     "shell.execute_reply.started": "2025-04-01T18:59:07.062224Z"
+     "iopub.execute_input": "2025-04-05T16:10:58.072776Z",
+     "iopub.status.busy": "2025-04-05T16:10:58.072636Z",
+     "iopub.status.idle": "2025-04-05T16:11:02.154555Z",
+     "shell.execute_reply": "2025-04-05T16:11:02.154118Z",
+     "shell.execute_reply.started": "2025-04-05T16:10:58.072766Z"
     }
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jakub/.cache/pypoetry/virtualenvs/scikit-fingerprints-VjWItXgH-py3.10/lib/python3.10/site-packages/huggingface_hub/file_download.py:797: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -433,14 +425,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-01T19:00:19.243482Z",
-     "iopub.status.busy": "2025-04-01T19:00:19.242818Z",
-     "iopub.status.idle": "2025-04-01T19:00:23.301436Z",
-     "shell.execute_reply": "2025-04-01T19:00:23.300786Z",
-     "shell.execute_reply.started": "2025-04-01T19:00:19.243463Z"
+     "iopub.execute_input": "2025-04-05T16:11:02.154931Z",
+     "iopub.status.busy": "2025-04-05T16:11:02.154826Z",
+     "iopub.status.idle": "2025-04-05T16:11:04.425998Z",
+     "shell.execute_reply": "2025-04-05T16:11:04.425676Z",
+     "shell.execute_reply.started": "2025-04-05T16:11:02.154922Z"
     }
    },
    "outputs": [
@@ -486,14 +478,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-01T19:03:52.314082Z",
-     "iopub.status.busy": "2025-04-01T19:03:52.313529Z",
-     "iopub.status.idle": "2025-04-01T19:03:52.322344Z",
-     "shell.execute_reply": "2025-04-01T19:03:52.321797Z",
-     "shell.execute_reply.started": "2025-04-01T19:03:52.314062Z"
+     "iopub.execute_input": "2025-04-05T16:11:04.426528Z",
+     "iopub.status.busy": "2025-04-05T16:11:04.426407Z",
+     "iopub.status.idle": "2025-04-05T16:11:05.091156Z",
+     "shell.execute_reply": "2025-04-05T16:11:05.090838Z",
+     "shell.execute_reply.started": "2025-04-05T16:11:04.426517Z"
     },
     "id": "fUtOB4EAYCWW"
    },
@@ -506,7 +498,7 @@
        "       [0.66666667, 0.66666667, 1.        ]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,19 +534,19 @@
     "id": "V2jSyK4TdYd3"
    },
    "source": [
-    "If pass a single array, then the similarities will be computed between its rows. This is useful for self-similarity computation, e.g. evaluation chemical diversity of a dataset."
+    "If we pass a single array, then the similarities will be computed between its rows. This is useful for self-similarity computation, e.g. evaluation chemical diversity of a dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-01T19:03:53.498982Z",
-     "iopub.status.busy": "2025-04-01T19:03:53.498733Z",
-     "iopub.status.idle": "2025-04-01T19:03:53.509360Z",
-     "shell.execute_reply": "2025-04-01T19:03:53.508857Z",
-     "shell.execute_reply.started": "2025-04-01T19:03:53.498959Z"
+     "iopub.execute_input": "2025-04-05T16:11:05.091579Z",
+     "iopub.status.busy": "2025-04-05T16:11:05.091474Z",
+     "iopub.status.idle": "2025-04-05T16:11:05.498949Z",
+     "shell.execute_reply": "2025-04-05T16:11:05.498416Z",
+     "shell.execute_reply.started": "2025-04-05T16:11:05.091570Z"
     },
     "id": "Jt0wjKx7djie"
    },
@@ -567,7 +559,7 @@
        "       [1., 0., 1.]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,14 +595,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-01T19:06:16.941566Z",
-     "iopub.status.busy": "2025-04-01T19:06:16.941088Z",
-     "iopub.status.idle": "2025-04-01T19:06:16.950325Z",
-     "shell.execute_reply": "2025-04-01T19:06:16.949395Z",
-     "shell.execute_reply.started": "2025-04-01T19:06:16.941536Z"
+     "iopub.execute_input": "2025-04-05T16:11:05.499424Z",
+     "iopub.status.busy": "2025-04-05T16:11:05.499325Z",
+     "iopub.status.idle": "2025-04-05T16:11:05.504235Z",
+     "shell.execute_reply": "2025-04-05T16:11:05.503935Z",
+     "shell.execute_reply.started": "2025-04-05T16:11:05.499415Z"
     },
     "id": "U7UsgXGXgaod"
    },
@@ -645,10 +637,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
+    },
+    "execution": {
+     "iopub.execute_input": "2025-04-05T16:11:05.504711Z",
+     "iopub.status.busy": "2025-04-05T16:11:05.504543Z",
+     "iopub.status.idle": "2025-04-05T16:11:05.661892Z",
+     "shell.execute_reply": "2025-04-05T16:11:05.661331Z",
+     "shell.execute_reply.started": "2025-04-05T16:11:05.504702Z"
     },
     "id": "pbGGAxWhhmPt",
     "outputId": "aa6f54cc-5886-4955-c55c-7a671729df41"
@@ -658,7 +657,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14.4 ms ± 2.03 ms per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
+      "4.72 ms ± 148 μs per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -668,20 +667,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "execution": {
+     "iopub.execute_input": "2025-04-05T16:11:05.662331Z",
+     "iopub.status.busy": "2025-04-05T16:11:05.662235Z",
+     "iopub.status.idle": "2025-04-05T16:11:06.086372Z",
+     "shell.execute_reply": "2025-04-05T16:11:06.086046Z",
+     "shell.execute_reply.started": "2025-04-05T16:11:05.662323Z"
+    },
     "id": "9e9AtjEThn6U",
-    "outputId": "e227bf9c-187e-4730-e025-d92f10fd9bf1"
+    "outputId": "e227bf9c-187e-4730-e025-d92f10fd9bf1",
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "675 µs ± 64.3 µs per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
+      "The slowest run took 315.64 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "13.9 ms ± 19.4 ms per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -693,7 +701,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Speedup is visible even on such a small sample. When you go into hundreds or thousands of compounds, size typical for real-world datasets, it is often degrees of magnitude."
+    "Speedup is visible even on such a small sample. For hundreds or thousands of compounds the time performance can be improved by several orders of magnitude."
    ]
   }
  ],
