--- a/examples/09_molecular_filters.ipynb
+++ b/examples/09_molecular_filters.ipynb
@@ -711,7 +711,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -725,7 +725,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
